--- a/blogs/style/phuket/phuket.css
+++ b/blogs/style/phuket/phuket.css
@@ -5,7 +5,7 @@
           box-sizing: border-box;
   font-family: "Poppins", sans-serif;
   text-rendering: optimizeLegibility;
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
 }
 
 .center {
@@ -413,6 +413,8 @@ header .header-p {
       grid-template-rows: 3.5rem auto auto;
   background: #f1f2f8;
   position: relative;
+  -webkit-animation: 300ms opacityIn forwards linear;
+          animation: 300ms opacityIn forwards linear;
 }
 
 .comment-container .comment-container-upper,
