--- a/blogs/style/phuketBeach/phuketBeach.scss
+++ b/blogs/style/phuketBeach/phuketBeach.scss
@@ -73,7 +73,7 @@ header {
   width: 100%;
   height: 80vh;
   background: url(../../../assets/articles/phuketBeach/header.jpg) no-repeat bottom;
-  background-position-y: -24rem;
+//   background-position-y: -24rem;
   background-size: cover;
   background-attachment: fixed;
   display: flex;
